examples/good/nested.lk
int f(int x) {
	int f2(int y) {
		return x + y;
	}

	int x = 100;

	return f2(5);
}

int main() {
	print(f(2));
}